appId: com.flipcash.app.android
---
- runFlow: ../helpers/close_open_sheet.yaml
- tapOn:
    id: nav_wallet
- extendedWaitUntil:
   visible: Float
- tapOn: Float
- extendedWaitUntil:
   visible:
      id: token_info_screen
